# graphtrail

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  implementation-notes.md  station.json
.claude/memory-handoffs/: 2026-07-10-1838-plating-workflow-assets.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
benchmarks/affected-calibration/: README.md  results.json
benchmarks/context-cochange/: results.json
benchmarks/context-ranking/: corpus.json
benchmarks/cross-tool/: README.md  corpus.v1.json  result-schema.v1.json  run.py
benchmarks/cross-tool/fixtures/polyglot/base/go/: disconnected.go  go.mod  service.go  service_test.go
benchmarks/cross-tool/fixtures/polyglot/base/python/: __init__.py  service.py  test_service.py  unresolved.py
benchmarks/cross-tool/fixtures/polyglot/base/rust/: Cargo.toml
benchmarks/cross-tool/fixtures/polyglot/base/rust/src/: lib.rs
benchmarks/cross-tool/fixtures/polyglot/base/rust/tests/: impact.rs
benchmarks/cross-tool/fixtures/polyglot/base/typescript/: router.test.ts  router.ts  service.ts
benchmarks/tool-surface/: README.md  navigation-baseline.json  results.json
content/announcements/: v0.2.0-drafts.md
docs/: context-ranking-benchmark.md  releasing.md
docs/assets/: graphtrail-social-preview.jpg.prompt.txt
docs/assets/workflows/: quickstart.json  relationships.json
docs/design/: activegraph-inspiration.md  cocoindex-inspiration.md
docs/plans/: 2026-07-09-audit-expedite.md  2026-07-19-native-release-binaries.md
scripts/: release-preflight.sh  release-smoke.sh  verify-crates-version.sh
src/: cli.rs  evaluate.rs  lib.rs  main.rs  mcp.rs  model.rs  watch.rs
src/adapters/: codesearch.rs  miseledger.rs  mod.rs
src/extractors/: common.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/query/: affected.rs  blend.rs  context.rs  diff.rs  doctor.rs  export.rs  graph.rs  graph_tests.rs  health.rs  mod.rs  search.rs  stats.rs
src/store/: db.rs  explain.rs  lock.rs  meta.rs  mod.rs  persist.rs  repo_policy.rs  resolve.rs  schema.rs  sync.rs  walk.rs
tests/: analysis.rs  cli_read_only.rs  context_ranking_benchmark.rs  cross_tool_benchmark.rs  diff.rs  golden_corpus.rs  identity_v7.rs  incremental.rs  json_schema.rs  mcp.rs  repository_contract.rs  resolution.rs  round3.rs  station_manifest.rs
tests/fixtures/: cross_tool_comparator.py  cross_tool_request_echo.py  cross_tool_windows_paths.py
tests/fixtures/golden/mixed/: expected_edges.tsv
tests/fixtures/golden/mixed/go/: caller.go
tests/fixtures/golden/mixed/go/pkg/: pkg.go
tests/fixtures/golden/mixed/python/pkg/commands/: handoff_cmd.py
tests/fixtures/golden/mixed/python/pkg/commands/sub/: caller.py
tests/fixtures/golden/mixed/src/: lib.rs  m.rs  mcp.rs
tests/fixtures/golden/mixed/ts/src/: util.ts
tests/fixtures/golden/mixed/ts/src/app/: caller.ts
