[package]
name = "graphtrail"
version = "0.1.0"
edition = "2024"
description = "Local code graph sidecar for semantic search, agent context, and Brigade receipts."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
ureq = { version = "2", features = ["json"], optional = true }
walkdir = "2.5"

[features]
# Optional, no-network-by-default integrations.
codesearch = ["dep:ureq"]
miseledger = []

[dev-dependencies]
tempfile = "3"
