[package]
name = "graphtrail"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Local code-graph CLI and MCP server for coding agents: tree-sitter callers, callees, impact, context, read-only queries, opt-in index refresh, and no network in the default build."
license = "MIT"
repository = "https://github.com/escoffier-labs/graphtrail"
homepage = "https://graphtrail.escoffierlabs.dev"
readme = "README.md"
keywords = ["code-graph", "mcp", "tree-sitter", "call-graph", "agents"]
categories = ["development-tools", "command-line-utilities"]
default-run = "graphtrail"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ignore = "0.4.25"
tree-sitter = "0.26.9"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
notify = { version = "8", optional = true }
ureq = { version = "2", features = ["json"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["watch"]
# Optional, no-network-by-default integrations.
codesearch = ["dep:ureq"]
miseledger = []
# Foreground file watcher driving debounced incremental syncs. On by default;
# disable with --no-default-features for the smallest binary.
watch = ["dep:notify"]

[dev-dependencies]
tempfile = "3"
